# solana2

./: .gitignore  .roomodes  AUTOSYNC_STATUS.md  CLAUDE.md  DETECTION_COMPLETE.md  DETECTION_SYSTEM.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  SOTA_IMPLEMENTATION_COMPLETE.md  deploy-frontend.sh  docker-compose.detector.yml  docker-compose.integrated.yml  docker-compose.sota.yml  docker-compose.yml  integration-bridge.js  mev  package.json  push-now.sh  start.py  start_mev_backend.sh  system-status.sh  test-sync.txt  test_full_integration.py  test_mev_api.sh  turbo.json
backend/: .env.example  Cargo.toml  Dockerfile  config.toml  deploy.sh  docker-compose.services.yml  pyproject.toml  test-connectivity.sh
backend/api-gateway/: package-lock.json  package.json
backend/api-gateway/src/: config.ts  index.ts  metrics.ts  routes.ts
backend/api-gateway/src/audit/: logger.ts
backend/api-gateway/src/auth/: oidc.ts
backend/api-gateway/src/routes/: data_scrapper.ts  node_metrics.ts
backend/api-gateway/src/security/: setup.ts
backend/app/: deps.py  main.py  metrics.py  middleware.py  settings.py  sse.py  ws.py
backend/app/ch/: client.py  schemas.py
backend/app/routers/: detections.py  entities.py  health.py  metrics.py  snapshot.py
backend/app/security/: auth.py  ws_tokens.py
backend/controls/: Dockerfile
backend/dex-parser/: Cargo.toml
backend/dex-parser/src/: lib.rs
backend/infra/clickhouse/ddl/: 12_proto_targets.sql  16_control_acks.sql  21_bandit_rollup.sql  22_codec_alter.sql
backend/infra/docker/: docker-compose-enhanced.yml
backend/infra/systemd/: arb-agent.service
backend/infrastructure/docker/: docker-compose.yml
backend/jito-engine/: Cargo.toml
backend/jito-engine/src/: main.rs  path_selector.rs
backend/jito-probe/: Dockerfile  package.json
backend/jito-probe/src/: index.ts
backend/libs/rust/: workspace-Cargo.toml
backend/libs/rust/proto/: Cargo.toml
backend/main-service/: Cargo.toml
backend/metrics-collector/src/: main.rs
backend/ml/training/: data_preprocessor.py  docker-compose.yml  model_monitor.py  model_trainer.py  requirements.txt
backend/optimizer/src/: main.rs
backend/proto/: Makefile
backend/proto/defs/: control.proto  realtime.proto
backend/rpc-probe/: package.json
backend/rpc-probe/src/: index.ts
backend/services/api-proxy/: index.js  package-lock.json
backend/services/arbitrage-detector/: Cargo.toml  Dockerfile
backend/services/arbitrage-detector/src/: performance_monitor.rs
backend/services/arbitrage-engine/: Cargo.toml
backend/services/arbitrage-engine/src/: arbiter.rs  main.rs  opportunity_scanner.rs  router.rs
backend/services/control-plane/: app.py  clickhouse_router.py  control.py  datasets.py  deps.py  health.py  install-service.sh  kafka_bridge.py  mev_core.py  realtime.py  requirements.txt  training.py  wt_gateway.py
backend/services/control-plane/proto_gen/: control_pb2.py  gen  jobs_pb2.py  realtime_pb2.py
backend/services/dashboard-api/src/: main.rs
backend/services/data-ingestion/: Cargo.toml
backend/services/data-scrapper/src/: api.rs  config.rs  dataset_manager.rs  main.rs
backend/services/dex-registry/: Cargo.toml
backend/services/dex-registry/src/: lib.rs
backend/services/execution-engine/: Cargo.toml
backend/services/execution-engine/src/: lib.rs  thompson_sampler.rs
backend/services/historical-capture/: Dockerfile  test_api.py
backend/services/historical-capture-api/: package-lock.json  package.json
backend/services/historical-capture/app/: capture.py  models.py
backend/services/historical-data/: .env.example  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  redpanda-console-config.yml
backend/services/historical-data/backfill-worker/: Dockerfile  package.json
backend/services/historical-data/clickhouse/: config.xml  init.sql
backend/services/historical-data/rust-ingester/: Cargo.toml  Dockerfile
backend/services/historical-data/scripts/: benchmark.sh
backend/services/historical-data/tests/: integration.test.ts
backend/services/historical-scrapper/: Cargo.toml
backend/services/historical-scrapper/src/: main.rs
backend/services/ingestors/control_acks_ingestor/: Cargo.toml
backend/services/mev-engine/: Cargo.toml
backend/services/mev-engine-lite/: package-lock.json
backend/services/mev-engine-rust/: Cargo.toml
backend/services/mev-engine/src/: config.rs  metrics.rs
backend/services/mission-control/: Cargo.toml  docker-compose.yml
backend/services/node-metrics/: Cargo.toml  Dockerfile
backend/services/sandwich-detector/: Cargo.toml
backend/shared/: Cargo.toml
backend/shared-types/src/: lib.rs
backend/shared/rust-common/: Cargo.toml
backend/shared/rust-common/src/: dedupe.rs  (+6 more)
backend/tools/: migrate-services.sh
backend/validator-agent/: Dockerfile  package.json
node/arbitrage-data-capture/arbitrage-detector/: Cargo.toml
node/backend/alert-system/: Cargo.toml
node/backend/arbitrage-engine/: Cargo.toml
node/backend/metrics-collector/: Cargo.toml
node/backend/optimizer/: Cargo.toml
node/backend/quic-service/: Cargo.toml
node/backend/shared-types/: Cargo.toml
node/geyser-plugins/kafka-delta/: Cargo.toml
node/old/backend-mev/: Cargo.toml
services/: Cargo.toml  Makefile  benchmarks.rs
services/decision-dna/: Cargo.toml
services/decision-dna/src/: main.rs
services/detection/: Cargo.toml
services/detection/src/: main.rs
services/detector/: Dockerfile  README.md  app.py  entity_analyzer.py  models.py  requirements.txt  sandwich_detector.rs  train_gnn.py  train_transformer.py  ultra_detector.py
services/infer/: Dockerfile  archetype_classifier.py  economic_impact.py  fleet_cluster.py  landing_ratio.py  latency_skew.py  main.py  ordering_quirks.py  requirements.txt
services/ingestion/solana_onlogs/: batching.py  config.py  decoder.py  metrics.py  run.py  writer.py
services/ml/: ultra_ml_pipeline.py
services/shred-ingest/: Cargo.toml
services/shred-ingest/src/: main.rs
services/shredstream/: Cargo.toml  build.rs
services/shredstream/src/: main.rs  ultra_ingestion.rs
(+1130 files in other folders)
