[package]
name = "jito-engine"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
rust-common = { path = "../shared/rust-common" }
tokio = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
jito-block-engine = { path = "../jito-block-engine" }
bytes = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
futures = "0.3"
async-channel = "2.3"
backoff = { version = "0.4", features = ["tokio"] }
tokio-util = { workspace = true }
lazy_static = "1.4"
rand = "0.8"
quinn = { workspace = true }
socket2 = "0.5"