[package]
name = "main-service"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "solana-mev-backend"
path = "src/main.rs"

[dependencies]
shared-types = { path = "../shared-types" }
# jito-engine is unavailable in this environment; keep it disabled for workspace builds
# jito-engine = { path = "../jito-engine" }
quic-service = { path = "../quic-service" }
dex-parser = { path = "../dex-parser" }
arbitrage-engine = { package = "arbitrage-core", path = "../arbitrage-engine" }
optimizer = { path = "../optimizer" }
metrics-collector = { path = "../metrics-collector" }
alert-system = { path = "../alert-system" }

tokio = { version = "1.40", features = ["full", "rt-multi-thread", "parking_lot"] }
solana-sdk = "2.0"
solana-client = "2.0"
tonic = { version = "0.12", features = ["gzip", "tls"] }
tower = { version = "0.4", features = ["full"] }
hyper = { version = "1.4", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"