[package]
name = "decision-dna-service"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
ed25519-dalek = "2.1"
blake3 = "1.5"
merkle = "1.11"
borsh = "1.5"
solana-sdk = "2.1"
solana-client = "2.1"
solana-transaction-status = "2.1"
rocksdb = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.11", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6.1"
crossbeam-channel = "0.5"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0"
prometheus = { version = "0.13", features = ["process"] }
axum = { version = "0.7", features = ["ws", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression"] }
hyper = "1.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
hex = "0.4"
ring = "0.17"
rand = "0.8"
once_cell = "1.20"
arc-swap = "1.7"
lru = "0.12"

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false