[package]
name = "detection-service"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tch = "0.16" # PyTorch for Rust
candle-core = "0.7" # Alternative lightweight ML framework
candle-nn = "0.7"
candle-transformers = "0.7"
ndarray = "0.16"
petgraph = "0.6"
rayon = "1.10"
parking_lot = "0.12"
dashmap = "6.1"
crossbeam-channel = "0.5"
arc-swap = "1.7"
ahash = "0.8"
smallvec = "1.13"
mimalloc = { version = "0.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.13"
blake3 = "1.5"
uuid = { version = "1.11", features = ["v4", "fast-rng", "serde"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0"
prometheus = { version = "0.13", features = ["process"] }
axum = { version = "0.7", features = ["ws", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression"] }
hyper = "1.5"
once_cell = "1.20"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.17"
ordered-float = "4.5"
priority-queue = "2.1"
lru = "0.12"

[build-dependencies]
cc = "1.2"
cmake = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.release.package."*"]
opt-level = 3
strip = true