[package]
name = "shred-ingest"
version = "1.0.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full", "rt-multi-thread", "parking_lot", "stats"] }
tokio-stream = "0.1"

# gRPC and protobuf
tonic = { version = "0.12", features = ["tls", "compression"] }
prost = "0.13"
prost-types = "0.13"

# Jito client
jito-grpc-client = "0.3"
solana-sdk = "2.1"
solana-transaction-status = "2.1"

# Data handling
bytes = "1.8"
bincode = "1.3"
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# High-performance collections
dashmap = "6.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
arc-swap = "1.7"
ahash = "0.8"
smallvec = "1.13"

# ClickHouse client
clickhouse = { version = "0.13", features = ["tokio", "lz4", "uuid"] }
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "fast-rng", "serde"] }

# Compression
lz4 = "1.28"
zstd = "0.13"

# Monitoring
prometheus = { version = "0.13", features = ["process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Configuration
config = "0.14"
envconfig = "0.10"

# Memory optimization
mimalloc = { version = "0.1", default-features = false }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false