[package]
name = "shredstream-service"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full", "rt-multi-thread", "parking_lot", "stats"] }
quinn = "0.11"  # QUIC implementation
rustls = { version = "0.23", features = ["ring"] }
prost = "0.13"
prost-types = "0.13"
bytes = "1.8"
dashmap = "6.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
arc-swap = "1.7"
ahash = "0.8"
smallvec = "1.13"
mimalloc = { version = "0.1", default-features = false }
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.29", features = ["net", "sched"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
blake3 = "1.5"
ed25519-dalek = "2.1"
rand = "0.8"
once_cell = "1.20"
anyhow = "1.0"
thiserror = "2.0"
prometheus = { version = "0.13", features = ["process"] }
hyper = { version = "1.5", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio"] }
http-body-util = "0.1"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "fast-rng", "serde"] }
lz4 = "1.28"
zstd = "0.13"

[build-dependencies]
prost-build = "0.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3
strip = true