[package]
name = "arbitrage-detector"
version = "1.0.0"
edition = "2021"

[dependencies]
# Internal dependencies
dex-parser = { path = "../../dex-parser" }

# Use workspace dependencies for consistency
tokio = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clickhouse = { workspace = true }
redis = { workspace = true }
rdkafka = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
prometheus = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
num-traits = { workspace = true }
num-bigint = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true }

# Additional dependencies not in workspace
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots"] }
rayon = "1.10"
rust_decimal_macros = "1.36"
bs58 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
warp = "0.3"
priority-queue = "2.0"
lru = "0.12"
moka = { version = "0.12", features = ["future"] }
zeroize = "1.8"

# Note: Removed anchor-client, anchor-lang, serum_dex, and kafka 
# due to version conflicts. Will use direct Solana SDK calls.