[package]
name = "data-ingestion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
clickhouse = { workspace = true }
redis = { workspace = true }
rdkafka = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }
rust-common = { path = "../../shared/rust-common" }

[[bin]]
name = "data-ingestion"
path = "src/main.rs"