[package]
name = "execution-engine"
version = "1.0.0"
edition = "2021"
authors = ["MEV Team"]

[dependencies]
# Core dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Solana & Jito
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
jito-protos = { workspace = true }
jito-block-engine = { workspace = true }

# High-performance networking
quinn = { workspace = true }
rustls = { workspace = true }
tonic = { workspace = true }

# Math and algorithms
rand = "0.8"
rand_distr = "0.4"
statrs = "0.17"
num-traits = { workspace = true }

# System optimization
libc = { workspace = true }
nix = { workspace = true }
core_affinity = "0.8"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Crossbeam for channels
crossbeam = { workspace = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

[[bench]]
name = "execution_bench"
harness = false