[package]
name = "mission-control"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Solana SDK
solana-client = "2.0"
solana-sdk = "2.0"
solana-rpc-client = "2.0"
solana-rpc-client-api = "2.0"
solana-transaction-status = "2.0"

# Jito integration
tonic = "0.12"
prost = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.7"

# Database & caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
clickhouse = "0.13"
rdkafka = { version = "0.36", features = ["tokio"] }

# Metrics & monitoring
prometheus = "0.13"
opentelemetry = "0.27"
opentelemetry-prometheus = "0.29"

# Performance optimizations
crossbeam = "0.8"
dashmap = "6.1"
parking_lot = "0.12"
ahash = "0.8"
arc-swap = "1.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
futures = "0.3"
pin-project = "1.1"
once_cell = "1.20"

# QUIC monitoring
quinn = "0.11"
rustls = "0.23"

# WebSocket
tokio-tungstenite = "0.24"

# Circuit breaker
failsafe = "1.3"

# Configuration
config = "0.14"
dotenv = "0.15"

# Random for simulation
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"