[package]
name = "node-metrics"
version = "1.0.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }

# High-performance networking
hyper = { workspace = true }
tower = { workspace = true }
tonic = { workspace = true }
quinn = { workspace = true }
axum = "0.7"

# WebSocket support
tokio-tungstenite = "0.24"
futures-util = { workspace = true }

# Solana SDK
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }

# Zero-copy and lock-free structures
bytes = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
arc-swap = { workspace = true }
ahash = { workspace = true }

# Ring buffer for latency history
ringbuf = "0.4"

# Statistics operations (SIMD not available in stable Rust)
# Using standard library instead

# Metrics and monitoring
prometheus = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Database and caching
redis = { workspace = true }
clickhouse = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Additional utilities
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
config = { workspace = true }

# System-level optimizations
libc = { workspace = true }
nix = { workspace = true }
cpu-time = { workspace = true }

# Circuit breaker pattern
failsafe = "1.3"

# Statistics
statrs = "0.17"

[dev-dependencies]
criterion = "0.5"
proptest = "1.5"

