[package]
name = "rust-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Solana
solana-sdk = { workspace = true }
solana-client = { workspace = true }

# Performance
ahash = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
blake3 = { workspace = true }
once_cell = { workspace = true }
bytemuck = { workspace = true }
zerocopy = { workspace = true }

# Metrics
prometheus = { workspace = true }
tracing = { workspace = true }

# Math
ethnum = { workspace = true }
rust_decimal = { workspace = true }

# Utils
chrono = { workspace = true }
uuid = { workspace = true }

# Database
clickhouse = { workspace = true }

# Time handling
time = { version = "0.3", features = ["macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["socket", "uio"] }
socket2 = { version = "0.5" }

[lib]
name = "rust_common"
path = "src/lib.rs"