[package]
name = "arbitrage-detector"
version = "1.0.0"
edition = "2021"

[dependencies]
dex-parser = { path = "../../backend/dex-parser" }
tokio = { version = "1.41", features = ["full"] }
solana-client = "2.1"
solana-sdk = "2.1"
solana-transaction-status = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Use tokio-tungstenite directly; tungstenite doesn't expose that feature
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots"] }
clickhouse = { version = "0.13" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
kafka = "0.10"
rdkafka = { version = "0.36", features = ["tokio"] }
rayon = "1.10"
dashmap = "6.1"
futures = "0.3"
anyhow = "1.0"
thiserror = "2.0"
zeroize = "1.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
bincode = "1.3"
bs58 = "0.5"
borsh = "1.5"
anchor-client = "0.30"
anchor-lang = "0.30"
serum_dex = "0.5"
reqwest = { version = "0.12", features = ["json"] }
prometheus = "0.13"
warp = "0.3"
priority-queue = "2.1"
parking_lot = "0.12"
crossbeam = "0.8"
lru = "0.12"
moka = { version = "0.12", features = ["future"] }
num-traits = "0.2"
num-bigint = "0.4"
lazy_static = "1.5"
uuid = { version = "1.11", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true