[package]
name = "arbitrage-core"
version.workspace = true
edition.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
dex-parser = { path = "../dex-parser" }
# jito-engine is unavailable in this environment; keep it disabled for workspace builds
# jito-engine = { path = "../jito-engine" }
tokio = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
arc-swap = { workspace = true }
ethnum = { workspace = true }
rust_decimal = { workspace = true }
num-traits = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
petgraph = "0.6"
priority-queue = "2.0"
ordered-float = "4.2"