[package]
name = "shared-types"
version = "1.0.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
ethnum = { version = "1.5", features = ["serde"] }
parking_lot = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dashmap = { version = "6.0", features = ["raw-api"] }